--- a/07_projects/1_colorChange/style.css
+++ b/07_projects/1_colorChange/style.css
@@ -4,16 +4,20 @@
     box-sizing: border-box;
 }
 .canvas {
-    background-color: #2121;
     width: 80%;
     margin: 100px auto 100px;
     text-align: center;
 }
+h1 {
+    margin-bottom: 36px;
+}
 span {
     width: 100px;
     height: 100px;
+    border-radius: 50%;
     display: inline-block;
-    /* border: 1px solid black; */
+    border: 2px solid black;
+    margin: 5px;
 }
 #grey {
     background-color: grey;
